--- a/.env
+++ b/.env
@@ -9,3 +9,5 @@ PHONE_PE_HOST_URL = "https://api-preprod.phonepe.com/apis/pg-sandbox"
 SALT_INDEX = 1
 SALT_KEY = "96434309-7796-489d-8924-ab56988a6076"
 APP_BASE_URL="http://localhost:9100"
+SUCCESS_URL="http://localhost:8080/success" 
+FAILURE_URL="http://localhost:8080/failure"
